--- a/codelabs/css/main.css
+++ b/codelabs/css/main.css
@@ -1,9 +1,13 @@
 body {
-    font-family: sans-serif;
-  }
-  
-  video {
-    max-width: 100%;
-    width: 320px;
-  }
-  
+  font-family: sans-serif;
+}
+
+canvas {
+  max-width: 100%;
+  width: 320px;
+}
+
+video {
+  max-width: 100%;
+  width: 320px;
+}
